# rose_operations

action_planner/: CMakeLists.txt  package.xml
action_planner/include/: action_planner.hpp  action_planner_node.hpp
action_planner/src/: action_planner_node.cpp
gui_script_manager/: CMakeLists.txt  package.xml
gui_script_manager/include/: Parameter.hpp  Script.hpp
gui_script_manager/src/: script_manager.py
operation_manager/action/: execute.action
operation_manager/include/: operation_manager.hpp  operation_manager_node.hpp
operation_manager/launch/: operation_manager.launch
operation_manager/src/: operation_manager_node.cpp
operations/: CMakeLists.txt  package.xml
operations/action/: basic_operation.action
operations/include/arm_driving_position/: arm_driving_position.hpp  arm_driving_position_node.hpp
operations/include/arm_grabbing_position/: arm_grabbing_position.hpp  arm_grabbing_position_node.hpp
operations/include/close_gripper/: close_gripper_node.hpp
operations/include/give/: give_node.hpp
operations/include/grab/: grab.hpp  grab_node.hpp
operations/include/handover_to_rose/: handover_to_rose_node.hpp
operations/include/open_gripper/: open_gripper_node.hpp
operations/include/operation_base_class/: operation_base_class.hpp
operations/include/place/: place.hpp
operations/include/position_determinator/: position_determinator_node.hpp
operations/include/strech/: strech_node.hpp
operations/src/arm_driving_position/: arm_driving_position.cpp  arm_driving_position_node.cpp
operations/src/arm_grabbing_position/: arm_grabbing_position_node.cpp
operations/src/close_gripper/: close_gripper.cpp
operations/src/give/: give.cpp
operations/src/grab/: grab_node.cpp
operations/src/handover_to_rose/: handover_to_rose.cpp  handover_to_rose_node.cpp
operations/src/manipulation_base_class/: manipulation_base_class.cpp
operations/src/move_to/: move_to.cpp
operations/src/open_gripper/: open_gripper.cpp
operations/src/place/: place.cpp
operations/src/position_determinator/: position_determinator_node.cpp
operations/src/say/: say_node.cpp
operations/src/strech/: strech.cpp  strech_node.cpp
parameter_manager/: CMakeLists.txt
parameter_manager/include/: parameter_manager.hpp  parameter_manager_node.hpp
parameter_manager/src/: parameter_manager.cpp  parameter_manager_node.cpp
rose_action_planner/: CMakeLists.txt  package.xml
rose_action_planner/include/rose_action_planner/: action_planner.hpp  action_planner_node.hpp
rose_action_planner/src/: action_planner.cpp  action_planner_node.cpp
rose_action_planner/srv/: recover.srv
rose_operation_manager/: CMakeLists.txt  package.xml
rose_operation_manager/include/: operation_manager.hpp
rose_operation_manager/include/rose_operation_manager/: operation_manager.hpp  operation_manager_node.hpp
rose_operation_manager/launch/: operation_manager.launch
rose_operation_manager/src/: operation_manager.cpp  operation_manager_node.cpp
rose_operations/: CMakeLists.txt  package.xml
rose_operations/include/arm_driving_position/: arm_driving_position.hpp  arm_driving_position_node.hpp
rose_operations/include/arm_grabbing_position/: arm_grabbing_position.hpp  arm_grabbing_position_node.hpp
rose_operations/include/arm_pose_base_class/: arm_pose_base.hpp
rose_operations/include/close_gripper/: close_gripper.hpp  close_gripper_node.hpp
rose_operations/include/give/: give.hpp  give_node.hpp
rose_operations/include/grab/: grab.hpp  grab_node.hpp
rose_operations/include/handover_to_rose/: handover_to_rose.hpp  handover_to_rose_node.hpp
rose_operations/include/manipulation_base_class/: manipulation_base_class.hpp
rose_operations/include/move_to/: move_to.hpp  move_to_node.hpp
rose_operations/include/open_gripper/: open_gripper.hpp  open_gripper_node.hpp
rose_operations/include/operation_base_class/: operation_base_class.hpp
rose_operations/include/place/: place_node.hpp
rose_operations/include/position_determinator/: position_determinator.hpp  position_determinator_node.hpp
rose_operations/include/say/: say.hpp  say_node.hpp
rose_operations/include/strech/: strech.hpp  strech_node.hpp
rose_operations/launch/: operations.launch
rose_operations/src/arm_driving_position/: arm_driving_position.cpp
rose_operations/src/arm_grabbing_position/: arm_grabbing_position.cpp
rose_operations/src/arm_pose_base_class/: arm_pose_base.cpp
rose_operations/src/close_gripper/: close_gripper.cpp  close_gripper_node.cpp
rose_operations/src/give/: give.cpp  give_node.cpp
rose_operations/src/grab/: grab.cpp
rose_operations/src/handover_to_rose/: handover_to_rose.cpp
rose_operations/src/look_around/: look_around.py
rose_operations/src/manipulation_base_class/: manipulation_base_class.cpp
rose_operations/src/move_to/: move_to.cpp  move_to_node.cpp
rose_operations/src/open_gripper/: open_gripper.cpp  open_gripper_node.cpp
rose_operations/src/operation_base_class/: operation_base_class.cpp
rose_operations/src/place/: place_node.cpp
rose_operations/src/position_determinator/: position_determinator.cpp
rose_operations/src/say/: say.cpp
rose_operations/src/strech/: strech.cpp
rose_parameter_manager/: CMakeLists.txt  package.xml
rose_parameter_manager/action/: parameter.action
rose_parameter_manager/include/rose_parameter_manager/: parameter_manager.hpp
rose_parameter_manager/src/: parameter_manager.cpp  parameter_manager_node.cpp
rose_script_manager/: CMakeLists.txt  package.xml
rose_script_manager/include/: Parameters.hpp
rose_script_manager/src/: publisher.py
