<?xml version="1.0"?>
<package>
  <name>parameter_manager</name>
  <version>0.0.0</version>
  <description>The parameter_manager package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rose_datamanager_api</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>server_multiple_client</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rose_datamanager_api</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>server_multiple_client</run_depend>

  <export>
  </export>
</package>